# Cornerstone

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  Makefile  README.md  compose.test.yml  compose.vs2.yml  compose.yml  cornerstone  docker-compose.yml  env  env.example.local  package-lock.json  package.json  pyproject.toml  run-all.sh  run-dev.sh  run-prod.sh  run.sh  tailwind.config.cjs
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/.github/workflows/: dependency-complete-verification.yml
backend/docs/: 00-backend-architecture.md  01-api-contract.md  02-testing-strategy.md  03-feature-test-matrix.md  08-connector-framework-notion-v0.4.md  09-source-state-notion-discovery-v0.5.md  10-generic-ingestion-notion-v0.6.md  15-provider-object-ingestion-safety-v0.8.2.md  20-live-postgres-verification-v0.9.1.md  23-grounded-serving-contract-v0.11.0.md  25-product-trust-cleanup-v0.12.1.md  26-live-proof-fixes-v0.12.2.md  28-backend-v1.0.0-rc.1.md  30-cli-macos-starter-v1.1.0.md  31-cli-product-loop-v1.1.1.md  32-one-command-proof-runner-v1.1.2.md  33-cross-platform-starter-v1.1.3.md  34-cli-maintainability-v1.1.4.md  35-google-drive-connector-v1.2.0.md  36-ontology-ssot-product-contract-v1.2.1.md  37-ontology-domain-model-proposal-v1.2.1.md  38-ontology-versioned-implementation-plan-v1.2.1.md  39-ontology-graph-runtime-v1.3.0.md  40-manual-upload-ingestion-v1.3.1.md  41-llm-ontology-extraction-v1.4.0.md  42-ontology-candidate-review-workflow-v1.5.0.md  43-explainable-graph-serving-v1.6.0.md  44-ontology-evaluation-v1.7.0.md  45-connector-driven-reextraction-v1.8.0.md  46-end-to-end-proof-operator-ux-v1.9.0.md  47-ontology-ssot-release-v2.0.0.md  48-version-chronicle-and-measurable-checklists-v2.0.0.md  49-refactor-domain-boundary-v2.0.1.md  50-product-documentation-layer-v2.0.2.md  51-dependency-complete-verification-v2.0.3.md  52-forward-roadmap-goals-checklists-v2.0.4.md  53-live-llm-ontology-provider-v2.1.0.md  54-review-operator-experience-v2.2.0.md  55-graph-visualization-contract-v2.3.0.md  56-connector-expansion-live-proof-hardening-v2.4.0.md  (+1 more)
backend/docs/adr/: 0001-ontology-official-trust-boundary.md
backend/docs/integration-starter-kit/: cli-guide.md  google-drive-quickstart.md  linux-quickstart.md  local-quickstart.md  macos-quickstart.md  notion-live-proof.md  windows-quickstart.md
backend/docs/live-proof-records/: 2026-04-28-v0.13.1-blocker-fix.md
backend/docs/product/: 00-product-overview.md  (+10 more)
backend/migrations/: env.py
backend/reports/: alembic-offline-v1.3.1.sql  alembic-offline-v1.5.0.txt  alembic-offline.sql  cli-completion-zsh-v1.1.4.txt  cli-config-v1.1.4.json  cli-maintainability-tests-v1.1.4.txt  cli-proof-v1.1.4.txt  cli-smoke-v1.1.0.txt  cli-smoke-v1.1.2.json  cli-smoke-v1.1.4.txt  compile-report-v1.1.2.txt  compile-report-v1.2.1.txt  compile-report-v1.3.1.txt  compile-report-v1.7.0.txt  compile-report-v1.9.0.txt  compile-report-v2.0.0.txt  compile-report-v2.0.4.txt  cornerstone-backend-alembic-offline-v0.12.2.sql  cornerstone-backend-coverage-summary-v0.12.2.txt  cornerstone-backend-coverage-v0.12.2.xml  cornerstone-backend-package-hygiene-v0.12.2.txt  cornerstone-backend-test-report-v0.12.2.txt  cornerstone-backend-test-run-summary-v0.12.2.md  cornerstone-proof-20260503T114750Z.json  cornerstone-proof-20260503T114757Z.json  coverage-pytest-report.txt  coverage-summary.txt  coverage-xml-report.txt  coverage.xml  dependency-complete-command-plan-v2.0.3.json  dependency-complete-command-plan-v2.0.3.md  docs-inventory-v1.2.1.txt  grounded-evaluation-regression-v1.7.0.txt  junit.xml  mypy-modified-v1.3.1.txt  mypy-report-v1.1.0.txt  mypy-report-v1.1.1.txt  mypy-targeted-v1.3.0.txt  ontology-evaluation-tests-v1.7.0.txt  ontology-extraction-smoke-v1.4.0.txt  (+108 more)
backend/scripts/: check_postgres_extensions.py  check_release_candidate.py  generate_shared_synthetic_corpus.py  linux_run_live_proof.sh  linux_setup.sh  linux_start_local.sh  macos_run_live_proof.sh  macos_setup.sh  macos_start_local.sh  run_dependency_complete_verification.py  run_dependency_complete_verification.sh  run_live_google_drive_e2e.py  run_live_postgres_tests.py  run_live_proof.sh  run_postgres_ci.sh  run_sync_worker.py  run_tests.sh  seed_demo.py  setup_local.sh  start_local.sh  windows_run_live_proof.ps1  windows_setup.ps1  windows_start_local.ps1
backend/tests/: conftest.py  mcp_testkit.py  test_config.py  test_ollama.py
(+1822 files in other folders)
