[project]
name = "cornerstone-backend"
version = "2.5.0"
description = "Backend-first FastAPI implementation slice for Cornerstone's evidence-backed organizational context layer."
readme = "README.md"
requires-python = ">=3.13,<3.15"
license = { text = "Proprietary" }
authors = [{ name = "Cornerstone Team" }]
dependencies = [
  "fastapi>=0.136.1,<1.0.0",
  "uvicorn[standard]>=0.46.0,<1.0.0",
  "pydantic>=2.13.3,<3.0.0",
  "httpx>=0.28.1,<1.0.0",
  "SQLAlchemy>=2.0.49,<2.1.0",
  "alembic>=1.18.4,<2.0.0",
  "psycopg[binary]>=3.3.3,<4.0.0",
  "cryptography>=46.0.4,<47.0.0",
  "notion-client>=3.0.0,<4.0.0",
  "google-api-python-client>=2.194.0,<3.0.0",
  "google-auth>=2.49.2,<3.0.0",
  "python-multipart>=0.0.20,<1.0.0"
]

[project.scripts]
cornerstone = "cornerstone.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10.0.0",
  "coverage>=7.13.0,<8.0.0",
  "ruff>=0.15.11,<1.0.0",
  "mypy>=1.20.2,<2.0.0"
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cornerstone"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
  "-vv",
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--tb=short",
  "--log-cli-level=INFO",
  "--log-cli-format=%(message)s",
  "--junitxml=reports/junit.xml"
]
filterwarnings = [
  "ignore:Please use `import python_multipart` instead\\.:PendingDeprecationWarning:ddtrace\\.internal\\.module",
  "ignore:Please use `import python_multipart` instead\\.:PendingDeprecationWarning"
]
markers = [
  "unit: fast domain and service tests",
  "integration: FastAPI request/response and end-to-end contract tests",
  "observability: tests that verify structured logs or audit events",
  "postgres: live PostgreSQL integration and concurrency tests",
  "live_notion: live Notion E2E pilot tests"
]

[tool.coverage.run]
branch = true
source = ["src/cornerstone"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 85
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:"
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["B008", "E501", "UP017"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
plugins = []
